Name:                accelerate-buildbot
Version:             0.1.0.0
Synopsis:            Accelerate performance & regression build bot
Description:         Accelerate performance & regression build bot
License:             BSD3
License-file:        LICENSE
Author:              The Accelerate Team
Maintainer:          Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Homepage:            http://www.cse.unsw.edu.au/~chak/project/accelerate/
Bug-reports:         https://github.com/AccelerateHS/accelerate/issues
Category:            Compilers/Interpreters, Concurrency, Data
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.4.1


Extra-source-files:  misc/banner.txt


Executable accelerate-buildbot
  Main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -Wall

  Build-depends:
    base                == 4.*,
    buildbox            == 1.5.*,
    bytestring          == 0.9.*,
    bytestring-csv      == 0.1.*,
    bytestring-lexing   == 0.2.*,
    cmdargs             >= 0.6,
    containers          >= 0.3    && <  0.5,
    directory           >= 1.0    && <  1.2,
    filepath            >= 1.1    && <  1.4,
    mtl                 >= 1.1    && <  3.0,
    old-locale          == 1.0.*,
    random              == 1.0.*,
    unix	            >= 2.4

Source-repository head
  Type:                 git
  Location:             git://github.com/AccelerateHS/accelerate-buildbot.git
